k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  namespace: outline
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /_health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: "${ACM_CERTIFICATE_ARN}"  # from: terraform output acm_certificate_arn
spec:
  rules:
    - host: alb-outline.devops-agent.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline-web
                port:
                  number: 80
    - host: outline.devops-agent.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline-web
                port:
                  number: 80
